实现权限树功能，添加权限缓存管理，优化权限获取逻辑，清除相关缓存，更新构建流程以支持Flyway清理和修复